# ShapeDescriptor

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp
data/: data.xml  fdata.xml
include/: ShapeDescriptor.h
src/: ShapeDescriptor.cpp  fourier_descriptors.cpp
